--- a/base.css
+++ b/base.css
@@ -25,14 +25,14 @@ header {
 main {
 	margin: 10px;
 }
-.section-title {
+h1 {
   display: flex;
   align-items: center;
   color: black;
   font-size: 64px;
   text-align: center;
 }
-.section-title::before {
+h1::before {
   content: "";
 	flex-grow: 0.9;
 	height: 1px;
@@ -40,7 +40,7 @@ main {
 	display: block;
 	margin-right: .4em;
 }
-.section-title::after {
+h1::after {
   content: "";
 	flex-grow: 0.1;
 	height: 1px;
@@ -48,7 +48,7 @@ main {
 	display: block;
 	margin-left: .4em;
 }
-.article p {
+h2 {
 	margin: 48px;
 }
 .works {
