--- a/base.css
+++ b/base.css
@@ -56,11 +56,13 @@ li {
 .works {
 	display: flex;
 	flex-flow: row-reverse;
+	justify-content: space-around;
 }
 .works img {
 	display: block;
 	margin: auto;
-	width: 30%;
+	width: 300px;
+	height: 300px;
 }
 .prof {
 	margin-left: 120px; 
@@ -79,9 +81,9 @@ li {
 }
 .icons {
 	display: flex;
-	width: 80%;
+	justify-content: space-around;
+	max-width: 1440px;
 	margin: auto;
-	text-align: center;
 }
 .icon {
 	margin: 50px auto;
@@ -111,6 +113,16 @@ li {
 .twitter i:hover {
 	color: #55acee;
 }
+#overlay {
+  	display: none;
+}
+.menu-trigger {
+  	display: none;
+}
+#slide {
+  	display: none;
+}
+
 /* ローディングの背景部分のCSS */
 .loader{
   background: #000;
