--- a/responsive-base.css
+++ b/responsive-base.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @media (max-width: 670px) {
 	*{
-		font-size: 22px;
+		font-size: 28px;
 	}
 	main {
 		margin: 10px;
@@ -13,14 +13,19 @@
 		margin: 24px;
 	}
 	li, li span {
-		font-size: 18px;
+		font-size: 20px;
 	}
 	.works {
 		flex-flow: column-reverse;
+		justify-content: center;
 	}
 	.works img {
-		width: 90%;
-		margin: 30px auto;
+		height: 280px;
+		width: 280px;
+		margin: 10px auto;
+	}
+	.go-instagram a {
+		font-size: 22px;
 	}
 	.prof {
 		margin: 40px;
@@ -32,4 +37,98 @@
 	.icon i {
 		font-size: 80px;
 	}
+	
+	#overlay {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.3);
+    display: none;
+    z-index: 1
+  }
+  #menu {
+    height: 50px;
+    width: 50px;
+    position: fixed;
+    bottom: 50px;
+    right: 30px;
+    font-size: 77%;
+  }
+  #menu a {
+    background: #666;
+    text-decoration: none;
+    color: #fff;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    display: block;
+    border-radius: 5px;
+  }
+	h3 {
+		color: #fff;
+	}
+	.close-menu {
+		display: flex;
+		justify-content: space-between;
+	}
+	#close {
+		text-align: right;
+	}
+  .menu-trigger, .menu-trigger span {
+    display: inline-block;
+    transition: all .4s;
+    box-sizing: border-box;
+  }
+  .menu-trigger {
+    position: relative;
+    width: 50px;
+    height: 44px;
+  }
+  .menu-trigger span {
+    position: absolute;
+    left: 0;
+    width: 80%;
+    height: 4px;
+    margin: 10%;
+    background-color: #fff;
+    border-radius: 4px;
+  }
+  .menu-trigger span:nth-of-type(1) {
+    top: 0;
+  }
+  .menu-trigger span:nth-of-type(2) {
+    top: 18px;
+  }
+  .menu-trigger span:nth-of-type(3) {
+    bottom: 0;
+  }
+  #slide {
+    display: none;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    padding: 15px;
+	  padding-bottom: 40px;
+    background: #555;
+    color: #fff;
+    z-index: 2;
+  }
+  #slide p {
+    margin-left: 25px;
+    color: #fff;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  #slide h3 {
+    font-size: 20px;
+    margin: 10px;
+  }
+  #slide h3 p {
+    margin-bottom: 15px;
+  }
+  .hide {
+    display: none;
+  }
 }
