--- a/base.css
+++ b/base.css
@@ -58,7 +58,7 @@ li {
 	flex-flow: row-reverse;
 	justify-content: space-around;
 }
-.works img {
+.works a img {
 	display: block;
 	margin: auto;
 	width: 300px;
