--- a/responsive-base.css
+++ b/responsive-base.css
@@ -1,4 +1,15 @@
 @charset "utf-8";
+@media (max-width: 1000px) {
+	.works {
+		flex-flow: column-reverse;
+		justify-content: center;
+	}
+	.works a img {
+		height: 500px;
+		width: 500px;
+		margin: 10px auto;
+	}
+}
 @media (max-width: 670px) {
 	*{
 		font-size: 28px;
@@ -19,7 +30,7 @@
 		flex-flow: column-reverse;
 		justify-content: center;
 	}
-	.works img {
+	.works a img {
 		height: 280px;
 		width: 280px;
 		margin: 10px auto;
@@ -132,3 +143,4 @@
     display: none;
   }
 }
+
