--- a/base.css
+++ b/base.css
@@ -1,28 +1,28 @@
 @charset "utf-8";
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
- 	text-decoration: none;
-  	list-style: none;
-	font-weight: normal;
-	font-size: 32px;
-	font-family: "Noto Sans JP", sans-serif;
-	font-weight: 100;
-	color: black;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    font-weight: normal;
+    font-size: 32px;
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: 100;
+    color: black;
 }
 
 .top {
-	display: table-cell;
-	vertical-align: middle;
-	margin: auto;
-	font-size: 100px;
-	text-align: center;
-	height: auto;
-	width: 100%;
+  display: table-cell;
+  vertical-align: middle;
+  margin: auto;
+  font-size: 100px;
+  text-align: center;
+  height: auto;
+  width: 100%;
 }
 main {
-	margin: 50px;
+  margin: 50px;
 }
 h1 {
   display: flex;
@@ -33,94 +33,157 @@ h1 {
 }
 h1::before {
   content: "";
-	flex-grow: 0.9;
-	height: 1px;
-	background: #a9a9a9;
-	display: block;
-	margin-right: .4em;
+  flex-grow: 0.9;
+  height: 1px;
+  background: #a9a9a9;
+  display: block;
+  margin-right: .4em;
 }
 h1::after {
   content: "";
-	flex-grow: 0.1;
-	height: 1px;
-	background: #a9a9a9;
-	display: block;
-	margin-left: .4em;
+  flex-grow: 0.1;
+  height: 1px;
+  background: #a9a9a9;
+  display: block;
+  margin-left: .4em;
 }
 h2 {
-	margin: 64px;
+  margin: 64px;
 }
 li {
-	margin: 32px 0;
+  margin: 32px 0;
 }
 .works {
-	display: flex;
-	flex-flow: row-reverse;
-	justify-content: space-around;
+  display: flex;
+  flex-flow: row-reverse;
+  justify-content: space-around;
+}
+.works a {
+  position: relative;	
 }
 .works a img {
-	display: block;
-	margin: auto;
+  display: block;
+  margin: auto;
+  width: 300px;
+  height: 300px;
+}
+.mask {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    background-color:rgba(0,0,0,0.4);
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+}
+.mask:hover {
+    opacity: 1;
+}
+.modal {
+	background: #fff;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    width: 930px;
+	height: 600px;
+	z-index: 60;
+	display: none;
+  	position: fixed;
+}
+.modal_img {
+  height: 600px;
+  width: 600px;
+  position: absolute;
+}
+.modal img {
+	height: 600px;
+	width: 600px;
+	position: absolute;
+}
+.m_content {
+	width: 330px;
+	padding-left: 600px;
+}
+.m_content h3 {
 	width: 300px;
-	height: 300px;
+	margin: 25px 15px;
+}
+.m_content p {
+	width: 300px;
+	margin: 25px 15px;;
 }
 .prof {
-	margin-left: 120px; 
+  margin-left: 120px; 
 }
 .copy-rights {
-	margin: 100px auto 30px;
-	font-size: 18px;
-	text-align: center;
-}
-.go-instagram {
-	text-align: center;
-	margin: 64px;
-}
-.go-instagram a {
-	border-bottom: dashed 1px #a9a9a9;
-}
-.icons {
-	display: flex;
-	justify-content: space-around;
-	max-width: 1440px;
-	margin: auto;
-}
-.icon {
-	margin: 50px auto;
-	text-align: center;
-}
-.icon i {
-	font-size: 200px;	
-}
-.github i {
-	transition: color 0.5s;
-	color: #a9a9a9;
-}
-.github i:hover {
-	color: #000000;
-}
-.instagram i {
-	transition: color 0.5s;
-	color: #a9a9a9;
-}
-.instagram i:hover {
-	color: #f13f79;
-}
-.twitter i {
-	transition: color 0.5s;
-	color: #a9a9a9;
-}
-.twitter i:hover {
-	color: #55acee;
+  margin: 100px auto 30px;
+  font-size: 18px;
+  text-align: center;
 }
 #overlay {
-  	display: none;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: none;
+    z-index: 20;
+  }
+
+.go-instagram {
+  text-align: center;
+  margin: 64px;
+}
+.go-instagram a {
+  border-bottom: dashed 1px #a9a9a9;
+}
+.icons {
+  display: flex;
+  justify-content: space-around;
+  max-width: 1440px;
+  margin: auto;
+}
+.icon {
+  margin: 50px auto;
+  text-align: center;
+}
+.icon i {
+  font-size: 200px;	
+}
+.github i {
+  transition: color 0.5s;
+  color: #a9a9a9;
+}
+.github i:hover {
+  color: #000000;
+}
+.instagram i {
+  transition: color 0.5s;
+  color: #a9a9a9;
+}
+.instagram i:hover {
+  color: #f13f79;
+}
+.twitter i {
+  transition: color 0.5s;
+  color: #a9a9a9;
+}
+.twitter i:hover {
+  color: #55acee;
+}
+#overlay {
+    display: none;
 }
 .menu-trigger {
-  	display: none;
+    display: none;
 }
 #slide {
-  	display: none;
+    display: none;
 }
 
 /* ローディングの背景部分のCSS */
@@ -131,7 +194,7 @@ li {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 50;
 }
 
 /* ローディングのアニメーション部分のCSS (https://projects.lukehaas.me/css-loaders/) */
