--- a/responsive-base.css
+++ b/responsive-base.css
@@ -8,6 +8,23 @@
 		height: 500px;
 		width: 500px;
 		margin: 10px auto;
+  	}
+  	.mask {
+		display: none;
+  	}
+	.mask:hover {
+	  	display: none;
+  	}
+	.modal {
+		height: 600px;
+		width: 600px;
+	}
+	.modal img {
+		height: 600px;
+		width: 600px;
+	}
+	.m_content {
+		display: none;
 	}
 }
 @media (max-width: 670px) {
@@ -34,6 +51,21 @@
 		height: 280px;
 		width: 280px;
 		margin: 10px auto;
+  	}
+  	.mask {
+		display: none;
+	}
+	.mask:hover {
+		display: none;
+	}
+	.modal {
+		width: 310px;
+		height: 310px;
+	}
+	.modal img {
+		width: 280px;
+		height: 280px;
+		margin: 15px;
 	}
 	.go-instagram a {
 		font-size: 22px;
@@ -49,34 +81,25 @@
 		font-size: 80px;
 	}
 	
-	#overlay {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.3);
-    display: none;
-    z-index: 1
-  }
-  #menu {
-    height: 50px;
-    width: 50px;
-    position: fixed;
-    bottom: 50px;
-    right: 30px;
-    font-size: 77%;
-  }
-  #menu a {
-    background: #666;
-    text-decoration: none;
-    color: #fff;
-    height: 50px;
-    width: 50px;
-    text-align: center;
-    display: block;
-    border-radius: 5px;
-  }
+  	#menu {
+		height: 50px;
+		width: 50px;
+		position: fixed;
+		bottom: 50px;
+		right: 30px;
+		font-size: 77%;
+		z-index: 20;
+	}
+	#menu a {
+		background: #666;
+		text-decoration: none;
+		color: #fff;
+		height: 50px;
+		width: 50px;
+		text-align: center;
+		display: block;
+		border-radius: 5px;
+	}
 	h3 {
 		color: #fff;
 	}
@@ -87,60 +110,61 @@
 	#close {
 		text-align: right;
 	}
-  .menu-trigger, .menu-trigger span {
-    display: inline-block;
-    transition: all .4s;
-    box-sizing: border-box;
-  }
-  .menu-trigger {
-    position: relative;
-    width: 50px;
-    height: 44px;
-  }
-  .menu-trigger span {
-    position: absolute;
-    left: 0;
-    width: 80%;
-    height: 4px;
-    margin: 10%;
-    background-color: #fff;
-    border-radius: 4px;
-  }
-  .menu-trigger span:nth-of-type(1) {
-    top: 0;
-  }
-  .menu-trigger span:nth-of-type(2) {
-    top: 18px;
-  }
-  .menu-trigger span:nth-of-type(3) {
-    bottom: 0;
-  }
-  #slide {
-    display: none;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    padding: 15px;
-	  padding-bottom: 40px;
-    background: #555;
-    color: #fff;
-    z-index: 2;
-  }
-  #slide p {
-    margin-left: 25px;
-    color: #fff;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  #slide h3 {
-    font-size: 20px;
-    margin: 10px;
-  }
-  #slide h3 p {
-    margin-bottom: 15px;
-  }
-  .hide {
-    display: none;
-  }
+  	.menu-trigger, .menu-trigger span {
+		display: inline-block;
+		transition: all .4s;
+		box-sizing: border-box;
+	}
+  	.menu-trigger {
+		position: relative;
+		width: 50px;
+		height: 44px;
+  	}
+  	.menu-trigger span {
+		position: absolute;
+		left: 0;
+		width: 80%;
+		height: 4px;
+		margin: 10%;
+		background-color: #fff;
+		border-radius: 4px;
+  	}
+  	.menu-trigger span:nth-of-type(1) {
+		top: 0;
+	}
+	.menu-trigger span:nth-of-type(2) {
+		top: 18px;
+	}
+  	.menu-trigger span:nth-of-type(3) {
+		bottom: 0;
+  	}
+  	#slide {
+		display: none;
+		position: fixed;
+		width: 100%;
+		bottom: 0;
+		padding: 15px;
+		padding-bottom: 40px;
+		background: #555;
+		color: #fff;
+		z-index: 25;
+  	}
+  	#slide p {
+		margin-left: 25px;
+		color: #fff;
+		text-decoration: none;
+		cursor: pointer;
+	}
+	#slide h3 {
+		font-size: 20px;
+		margin: 10px;
+  	}
+	#slide h3 p {
+		margin-bottom: 15px;
+  	}
+  	.hide {
+		display: none;
+  	}
+	
 }
 
